Revision history for Perl extension Caecilia.

0.25_01
	- Add insert decoration functionality (through Entry and through Preview (longpress)
	- Some code cleaning
0.24
	- Fix paste text event: Whole text should be rehighlighted
	- Fix render problem with missing parameter while using option -B
	- Update abc2svg to new version (v1.22.28)
0.23
	- Fix the problem, that play_length doesn't work on midi files (see https://git.enlightenment.org/enlightenment/efl/issues/101)
	- new feature: Play from specific note if the note is clicked with right button
0.22
	- Minor fixes
	- Add Music::Tempo to Makefile.PL
0.21
	- Fix undo/redo issues
	- Code cleanup
	- fix rounding with font size slider
	- show popup when an error occured by rendering
0.20 Wed Dec 07 07:00:00
	- complete rewrite wit pEFL (Einlightenment foundation library)
0.19 Sun Jun 28 00:43:00
    - Move from Image::LibRSVG to Image::Magick
    - Minor design improvements in Breeze theme and settings dialog
0.18 Wed Aug 14 19:00:00
	- Some adoptions for compatibility with Windows
	- Caecilia::Preview improvement: Jump to note now also works with rests
	- Bugfix: Keep modified status as it was before jumping to/selecting the note in Caecilia::Editor
	- Make settings dialog smaller and scrollable
0.17 Sat Aug 10 09:40:00
	- Further improvement with the jump_to_note callback 
	  (the note is now selected in Caecilia::Editor instead that only the cursor jumps at the note)
	- some code cleaning
0.16 Sat Aug 10 09:00:00
	- Update of Makefile.PL
	- Improving of the click and jump to the note feature in Caecilia::Preview
	  (after clicking on a note the keyboard focus is set automatically to Caecilia::Editor)
0.15 Fr Aug 9 23:06:00
	- Many Bugfixes in Editor, Preview and the GUI
	- Add window icon
0.14 Wed Aug 7 08:34:00
	- Reimplementation of Editor (Syntax Highlighting and Line numbers) in Perl/Tcl::Tk
	- Solving compatibility problems of abcm2ps in Caecilia::Preview
0.13 Mo Aug 5 20:30:00 2019